--- a/TrainOnline/Views/Trains/Index.cshtml
+++ b/TrainOnline/Views/Trains/Index.cshtml
@@ -3,9 +3,32 @@
 @{
     ViewData["Title"] = "Index";
 }
+@{
+    var _filter = (string)ViewBag.Filter;
+
+    var _sortTrainNumber = (bool?)ViewBag.sortTrainNumber;
+
+    var _totalItem = (int)ViewBag.Total;
+    var _index = (int)ViewBag.Index;
+    var _size = (int)ViewBag.Size;
+
+    var _totalPage = _totalItem / _size;
+    if (_totalItem % _size > 0)
+    {
+        _totalPage++;
+    }
+}
 
 <h1>Index</h1>
 
+<form class="row" asp-action="Index">
+    <div class="col-md-6">
+        <input type="text" class="form-control" name="filter" id="filter" value="@_filter" />
+    </div>
+    <div class="col-md-2">
+        <button class="btn btn-success" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+    </div>
+</form>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -13,7 +36,17 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.TrainNumber)
+                <div style="display:flex">
+                    <div>
+                        TrainNumber
+                    </div>
+                    <div>
+                        <ul>
+                            <li><a href="@Url.Action("Index","Trains", new { filter = _filter, sortTrainNumber = true })"><i class="fa-solid fa-caret-up"></i></a></li>
+                            <li><a href="@Url.Action("Index","Trains", new { filter = _filter, sortTrainNumber = false })"><i class="fa-solid fa-caret-down"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.GetTypeId)
@@ -46,10 +79,10 @@
                 @Html.DisplayFor(modelItem => item.TrainNumber)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.GetTypeId.TypeId)
+                @Html.DisplayFor(modelItem => item.TypeId)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.GetStatusId.StatusId)
+                @Html.DisplayFor(modelItem => item.StatusId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreatedBy)
@@ -75,3 +108,15 @@
 }
     </tbody>
 </table>
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="@Url.Action("Index","Trains", new { filter = _filter, sortTrainNumber = _sortTrainNumber, index = _index - 1 <=0 ? 1 : _index-1, size = _size })">Previous</a></li>
+        @for (var i = 0; i < _totalPage; i++)
+        {
+            <li class="page-item"><a class="page-link" href="@Url.Action("Index","Trains", new { filter = _filter, sortTrainNumber = _sortTrainNumber, index = i+1, size = _size })">@(i + 1)</a></li>
+        }
+
+        <li class="page-item"><a class="page-link" href="@Url.Action("Index","Trains", new { filter = _filter, sortTrainNumber = _sortTrainNumber, index = _index + 1 > _totalPage ? _totalPage : _index+1, size = _size })">Next</a></li>
+    </ul>
+</nav>
